# otiq

./: .gitignore  CMakeLists.txt  log_2025-01-08.txt
documentation/: BandwidthBuckets.xlsx  Guide- Share Gues Hots Folders VMWare  OTIQ Dev Manual.docx  ToDo  bandwidth_algo.xlsx  dev-configuration  json test results.rtf  scratch
documentation/TESTING/: base.pcap OTIQ vs Wireshark.xlsx
include/: otassets.h  otbw.h  otdb.h  otfifo - parsedPackets.h  otfifo copy.h  otfifo-rawpackets.h  otlog.h  otpbuff copy.h  otpbuff.h  otpp.h
libs/pcapplusplus-23.09/: README.release.md
libs/pcapplusplus-23.09/lib/cmake/pcapplusplus/: PcapPlusPlusConfigVersion.cmake  PcapPlusPlusTargets-release.cmake  PcapPlusPlusTargets.cmake
libs/pcapplusplus-23.09/lib/pkgconfig/: PcapPlusPlus.pc
pcaps/: base.sh  base_IPSrc_IPDst.csv  modbus.sh  modbus_test_2.pcap  simple_modbus.pcap
src/: Notes  log_2025-01-08.txt  main - old - before moving to updateactiveasset.cpp  main copy.cpp.old  main.cpp  otbw.cpp  otdb.cpp  otlog.cpp  otpp.cpp
